# dummy-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: DTOs.py  api_client.py  categories.py  models.py  products.py  schemas.py  settings.py  utils.py
src/scripts/: create_tables.sql  initdb.sh
src/storages/: crud.py  manager.py  models.py
